Bake deployment configs into Docker images
Add Dockerfiles for nginx, nginx-stream, prometheus, grafana, loki, promtail and alertmanager and update docker-compose to build those images instead of bind-mounting local config files. Introduce a dbal-init init container and named volumes (dbal-schemas, dbal-templates) to seed DBAL schemas/templates and switch the dbal service to use those volumes (depends on dbal-init). Add a Conan conanfile for DBAL daemon C++ dependencies and new media_daemon build-config files. Update deployment/nginx/production.conf to rewrite/redirect /storybook to /storybook/, and expand .dockerignore to allow baked-in deployment configs, DBAL templates and media daemon nginx stream config. Also add numerous Playwright CLI page snapshots (testing artifacts).

--- a/.dockerignore
+++ b/.dockerignore
@@ -115,3 +115,19 @@ dist
 !dbal/production/tests/integration/requirements.txt
 !services/email_service/requirements.txt
 !services/smtprelay/requirements.txt
+
+# Allow deployment config files for baked-in Docker images
+!deployment/portal
+!deployment/config/nginx/production.conf
+!deployment/config/prometheus/prometheus.yml
+!deployment/config/prometheus/alerts.yml
+!deployment/config/grafana/provisioning
+!deployment/config/loki/loki-config.yml
+!deployment/config/promtail/promtail-config.yml
+!deployment/config/alertmanager/alertmanager.yml
+
+# Allow DBAL templates for dbal-init volume seeder
+!dbal/templates/sql
+
+# Allow media daemon config for nginx-stream image
+!services/media_daemon/config/nginx-stream.conf
