--- a/deployment/config/nginx/production.conf
+++ b/deployment/config/nginx/production.conf
@@ -147,15 +147,19 @@ http {
       proxy_set_header Connection $connection_upgrade;
     }
 
-    # Storybook
-    location /storybook {
+    # Storybook (serve strips /storybook prefix — rewrite before proxying)
+    location /storybook/ {
       set $upstream_storybook storybook;
+      rewrite ^/storybook/(.*)$ /$1 break;
       proxy_pass http://$upstream_storybook:3000;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location = /storybook {
+      return 301 /storybook/;
     }
 
     # Frontend App
