--- a/frontends/exploded-diagrams/Dockerfile
+++ b/frontends/exploded-diagrams/Dockerfile
@@ -21,7 +21,7 @@ FROM node:22-alpine
 WORKDIR /app
 
 COPY --from=builder /app/frontends/exploded-diagrams/.next/standalone ./
-COPY --from=builder /app/frontends/exploded-diagrams/.next/static ./frontends/exploded-diagrams/.next/static
+COPY --from=builder /app/frontends/exploded-diagrams/.next/static ./.next/static
 COPY --from=builder /app/frontends/exploded-diagrams/public ./frontends/exploded-diagrams/public
 
 ENV NODE_ENV=production
@@ -33,5 +33,5 @@ EXPOSE 3000
 HEALTHCHECK --interval=15s --timeout=5s --start-period=30s --retries=3 \
     CMD wget --quiet --tries=1 --spider http://127.0.0.1:3000/diagrams || exit 1
 
-WORKDIR /app/frontends/exploded-diagrams
+WORKDIR /app
 CMD ["node", "server.js"]
