feat(translations): add Dutch (nl) translations and implement translation editor hooks
- Added Dutch translations (nl.json) for various components and messages.
- Created `useTranslation` hook for managing translations with fallback logic.
- Implemented `useTranslationEditor` hook for editing translations with DBAL persistence.
- Updated Redux slice for translations to manage locale and overrides.
- Registered new hooks and components in the JSON UI component registry.
- Enhanced the translations slice with async thunks for fetching, upserting, and deleting translations.
- Updated the translations package to include Dutch in supported locales.

--- a/frontends/codegen/src/components/json-definitions/project-settings-designer.json
+++ b/frontends/codegen/src/components/json-definitions/project-settings-designer.json
@@ -77,6 +77,11 @@
                   "type": "TabsTrigger",
                   "props": { "value": "data" },
                   "bindings": { "children": "copy.tabs.data" }
+                },
+                {
+                  "type": "TabsTrigger",
+                  "props": { "value": "language" },
+                  "bindings": { "children": "copy.tabs.language" }
                 }
               ]
             }
@@ -146,6 +151,16 @@
                   "children": [
                     {
                       "type": "DataTab"
+                    }
+                  ]
+                },
+                {
+                  "id": "language-tab",
+                  "type": "TabsContent",
+                  "props": { "value": "language", "className": "mt-0" },
+                  "children": [
+                    {
+                      "type": "MetabuilderWidgetTranslationEditor"
                     }
                   ]
                 }
