--- a/frontends/nextjs/Dockerfile
+++ b/frontends/nextjs/Dockerfile
@@ -1,48 +1,10 @@
-# Multi-stage build: deps cached separately from source changes
+# Multi-stage build: node_modules from base image, source built fresh
 # Context: monorepo root (..)
-FROM node:20-alpine AS deps
-WORKDIR /app
-
-COPY package.json package-lock.json .npmrc ./
-
-# Workspace package.json files
-COPY types/package.json ./types/
-COPY interfaces/package.json ./interfaces/
-COPY translations/package.json ./translations/
-COPY workflow/package.json ./workflow/
-COPY hooks/package.json ./hooks/
-COPY components/package.json ./components/
-COPY components/fakemui/package.json ./components/fakemui/
-COPY config/package.json ./config/
-COPY scss/package.json ./scss/
-COPY storybook/package.json ./storybook/
-COPY frontends/nextjs/package.json ./frontends/nextjs/
-COPY frontends/dbal/package.json ./frontends/dbal/
-COPY redux/core/package.json ./redux/core/
-COPY redux/slices/package.json ./redux/slices/
-COPY redux/hooks/package.json ./redux/hooks/
-COPY redux/adapters/package.json ./redux/adapters/
-COPY redux/hooks-data/package.json ./redux/hooks-data/
-COPY redux/hooks-auth/package.json ./redux/hooks-auth/
-COPY redux/hooks-canvas/package.json ./redux/hooks-canvas/
-COPY redux/hooks-async/package.json ./redux/hooks-async/
-COPY redux/hooks-utils/package.json ./redux/hooks-utils/
-COPY redux/hooks-forms/package.json ./redux/hooks-forms/
-COPY redux/core-hooks/package.json ./redux/core-hooks/
-COPY redux/api-clients/package.json ./redux/api-clients/
-COPY redux/timing-utils/package.json ./redux/timing-utils/
-COPY redux/middleware/package.json ./redux/middleware/
-COPY redux/services/package.json ./redux/services/
-COPY redux/persist/package.json ./redux/persist/
-
-RUN npm config set fetch-retries 5 \
-    && npm config set fetch-retry-mintimeout 20000 \
-    && npm config set maxsockets 5 \
-    && npm ci
-
+# Requires: docker build -f deployment/base-images/Dockerfile.node-deps \
+#           -t metabuilder/base-node-deps:latest .
 
 # --- Build stage ---
-FROM deps AS builder
+FROM metabuilder/base-node-deps:latest AS builder
 COPY . .
 
 # Build workspace library packages
@@ -52,9 +14,7 @@ RUN for ws in redux/core redux/slices redux/hooks redux/adapters \
     npm run build -w "$ws" --if-present 2>&1 || echo "WARN: $ws build failed (non-critical)"; \
 done
 
-# Pre-install Next.js SWC binary (avoids unreliable CDN download during next build)
-RUN npm install --no-save @next/swc-linux-arm64-musl @next/swc-linux-arm64-gnu 2>/dev/null || true
-
+# Build the app
 RUN cd frontends/nextjs && npx next build --webpack
 
 # --- Runtime stage ---
