Refactor and enhance TypeScript plugins
- Updated import paths for template engine utilities in multiple plugins.
- Improved type annotations and variable handling in DictDeepMerge and StorybookNode classes.
- Added support for CC and BCC fields in EmailSendExecutor.
- Enhanced AttachmentHandlerExecutor to include full attachment metadata.
- Modified CalendarSyncExecutor to improve time slot calculations.
- Updated DraftManagerExecutor to refine recovery logic.
- Enhanced EmailParserExecutor with improved part handling and charset decoding.
- Added new EncryptionStatus type for better encryption state management.
- Refactored various email integration plugins to improve state management and variable handling.
- Updated TypeScript configuration to target ES2022 and include additional paths.

--- a/hooks/tsconfig.json
+++ b/hooks/tsconfig.json
@@ -15,12 +15,24 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/lib/routing": ["./_types/lib/routing"],
+      "@/lib/level-types": ["./_types/lib/level-types"],
+      "@/lib/types/package-admin-types": ["./_types/lib/types/package-admin-types"],
+      "@/lib/validation/user-validation": ["./_types/lib/validation/user-validation"],
+      "@/app/[tenant]/[package]/tenant-context": ["./_types/app/tenant-context"],
+      "@/data/github-build-status.json": ["./_types/data/github-build-status.json"],
+      "@/data/favicon-designer.json": ["./_types/data/favicon-designer.json"],
+      "@/hooks/use-kv": ["./_types/hooks/use-kv"]
+    }
   },
   "include": [
     "use*.ts",
     "use*.tsx",
-    "index.ts"
+    "index.ts",
+    "_types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
