--- a/workflow/tsconfig.json
+++ b/workflow/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": ["ES2022"],
     "outDir": "./dist",
-    "rootDir": "./executor/ts",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -21,8 +21,12 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@metabuilder/workflow": ["./executor/ts/index.ts"]
+    }
   },
-  "include": ["executor/ts/**/*"],
+  "include": ["executor/ts/**/*", "plugins/ts/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
